# chess-ml

./: .gitignore  README.md  data_prep.py  fens.txt  lab1_2_stud (1).ipynb  model_train.ipynb  piece_model_eval.py  pieces_model.py  plotting.py  puzzle_data_downlad.py  pyproject.toml  requirements.txt  valid.ipynb
data/raw/: 2200.pgn  exam.pgn  example.pgn
models/: model_bishop.pth  model_rook.pth
notebooks/: alpha.ipynb  data_prep.ipynb  fen_trans_torch.ipynb  heu_data.ipynb  heu_data_turn.ipynb  heu_eval.ipynb  mlp_dataprep.ipynb  model_train.ipynb  model_weights.pth  nlp_data_prep.ipynb  nlp_fen_dataprep.ipynb  nlp_fen_dataprep64.ipynb  nlp_fen_dataprep_enc.ipynb  nlp_fenfull_dataprep.ipynb  rl.ipynb
plots/: 002-150000.txt  003-300000.txt  004-100000.txt  lstm64txt
src/features/: data_prep.py  fastapi_test.py  get_acc.py  plotting.py
src/heu/: models.py  train.py  train_many.py  train_many_gauss.py
src/lstm/: fen_vocab_src.json  seq2seq.py  seqModules.py  utils.py  vocab_tar.json
src/lstm64/: seq2seq.py  seqModules.py  service.py  testr.py  utils.py
src/lstm64masked/: seq2seq.py  seqModules.py  utils.py
src/mlp/: models.py  train.py
src/models/: model_mlp.py  train.py  train_piece.py
src/nlp/: Attention.py  Decoder.py  DecoderBlock.py  Encoder.py  SequenceDataset.py  Transformer.py  TransformerBlock.py  fen_trans.ipynb  fen_vocab.json  seq_an.py  train.py  vocab.json
src/rl/: dd.py  evalELO.py  evalTrain.py  game.py  gameEnv.py  main.py  model.py  monte.py  monte_playout.py  puzzle_transformation.py
