[project]
name = "heu"
version = "0.1.0"
description = ""
authors = [
    {name = "piotras",email = "piotr.kow.59@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "chess (>=1.11.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
